--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,12 +4,20 @@ galaxy_info:
   company: Viasite
   description: Install git and configure gitconfig
   license: MIT
-  min_ansible_version: 1.8
+  min_ansible_version: 2.0
   platforms:
     - name: Ubuntu
       versions:
         - trusty
         - xenial
-  categories:
+    - name: Ubuntu
+      versions:
+        - trusty
+        - xenial
+    - name: MacOSX
+      versions:
+        - 10.12
+  galaxy_tags:
     - system
+    - git
 dependencies: []
